diversity-lunch-fe/kubernetes/ingress/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: diversitylunch
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    cert-manager.io/issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - b9cd0857935a49f29778.germanywestcentral.aksapp.io
      secretName: frontend-ingress-cert
  rules:
    - host: b9cd0857935a49f29778.germanywestcentral.aksapp.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alternative-ingress
  namespace: diversitylunch
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    cert-manager.io/issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - dev-diversitylunch.brockhaus-ag.de
      secretName: frontend-ingress-cert-alternative
  rules:
    - host: dev-diversitylunch.brockhaus-ag.de
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
